examples/test/testpolicy19047.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19047
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key33: value17
      key6: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value33
      podSelector:
        matchLabels:
          key17: value33
          key4: value36
